// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundPage should match the snapshot, when view is greater or equal than a tablet view 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Accueil
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w text-center fr-mt-8w"
    id="page-container"
  >
    <h1
      class="text-center"
    >
      404 - Not Found
    </h1>
  </div>
</div>
`;

exports[`NotFoundPage should match the snapshot, when view is lower than a tablet view 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Accueil
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w text-center fr-mt-5w"
    id="page-container"
  >
    <h1
      class="text-center"
    >
      404 - Not Found
    </h1>
  </div>
</div>
`;
